--- a/views/main.ejs
+++ b/views/main.ejs
@@ -6,8 +6,9 @@
     
 </head>
 <body>
-<div id="map" style="width:100%;height:350px;"></div>
-<p><em>출발지와 도착지를 설정해주세요!</em></p>  
+<div id="map" style="width:100%;height:800px;"></div>
+<p>출발지와 도착지를 설정해주세요!</p>
+
 
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=비밀"></script>
 <script>
@@ -37,8 +38,9 @@ var startDragSrc = 'https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/red
 // 출발 마커의 드래그 이미지를 생성합니다
 var startDragImage = new kakao.maps.MarkerImage(startDragSrc, startDragSize, startDragOption);
 
-// 출발 마커가 표시될 위치입니다 
-var startPosition = new kakao.maps.LatLng(33.450701, 126.570667); 
+// 출발 마커가 표시될 위치입니다
+var startPosition = new kakao.maps.LatLng(33.450701, 126.570667);
+
 
 // 출발 마커를 생성합니다
 var startMarker = new kakao.maps.Marker({
@@ -47,6 +49,7 @@ var startMarker = new kakao.maps.Marker({
     draggable: true, // 출발 마커가 드래그 가능하도록 설정합니다
     image: startImage // 출발 마커이미지를 설정합니다
 });
+
 
 // 출발 마커에 dragstart 이벤트를 등록합니다
 kakao.maps.event.addListener(startMarker, 'dragstart', function() {
@@ -66,6 +69,7 @@ arriveOption = {
     offset: new kakao.maps.Point(15, 43) // 도착 마커이미지에서 마커의 좌표에 일치시킬 좌표를 설정합니다 (기본값은 이미지의 가운데 아래입니다)
 };
 
+
 // 도착 마커 이미지를 생성합니다
 var arriveImage = new kakao.maps.MarkerImage(arriveSrc, arriveSize, arriveOption);
 
@@ -80,7 +84,7 @@ var arriveDragImage = new kakao.maps.MarkerImage(arriveDragSrc, arriveDragSize, 
 
 // 도착 마커가 표시될 위치입니다 
 var arrivePosition = new kakao.maps.LatLng(33.450701, 126.572667);    
- 
+
 // 도착 마커를 생성합니다 
 var arriveMarker = new kakao.maps.Marker({  
     map: map, // 도착 마커가 지도 위에 표시되도록 설정합니다
@@ -100,6 +104,18 @@ kakao.maps.event.addListener(arriveMarker, 'dragend', function() {
      // 도착 마커의 드래그가 종료될 때 마커 이미지를 원래 이미지로 변경합니다
     arriveMarker.setImage(arriveImage);  
 });
+
 </script>
+<button type="button" onclick="Search();">text</button>
+<script>
+    function Search(){
+        var startx = startMarker.getPosition().getLat();
+        var starty = startMarker.getPosition().getLng();
+        var endx = arriveMarker.getPosition().getLat();
+        var endy = arriveMarker.getPosition().getLng();
+        location.href ='/search?startx='+ startx +'&starty='+ starty +'&endx=' + endx + '&endy=' + endy;
+}
+</script>
+
 </body>
 </html>
