Main page & 주변 장소 검색 기능 추가

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,121 +1,148 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
+
 <head>
-    <meta charset="utf-8">
-    <title>Pass-Path</title>
-    
+<link rel="stylesheet" type="text/css" href="https://t1.daumcdn.net/tistory_admin/lib/lightbox/css/lightbox.min.css" /><link rel="stylesheet" type="text/css" href="https://t1.daumcdn.net/tistory_admin/assets/blog/tistory-4143aead47fb3d3c83016433af84643a03241408/blogs/style/content/font.css?_version_=tistory-4143aead47fb3d3c83016433af84643a03241408" /><link rel="stylesheet" type="text/css" href="https://t1.daumcdn.net/tistory_admin/assets/blog/tistory-4143aead47fb3d3c83016433af84643a03241408/blogs/style/content/content.css?_version_=tistory-4143aead47fb3d3c83016433af84643a03241408" /><!--[if lt IE 9]><script src="https://t1.daumcdn.net/tistory_admin/lib/jquery/jquery-1.12.4.min.js"></script><![endif]--><!--[if gte IE 9]>
+<!--><script src="https://t1.daumcdn.net/tistory_admin/lib/jquery/jquery-3.2.1.min.js"></script><!--<![endif]-->
+<script src="https://t1.daumcdn.net/tistory_admin/lib/lightbox/js/lightbox-plus-jquery.min.js"></script>
+<script>
+lightbox.options.fadeDuration = 200;
+lightbox.options.resizeDuration = 200;
+lightbox.options.wrapAround = false;
+lightbox.options.albumLabel = "%1 / %2";
+</script>
+
+<script type="application/ld+json">{"@context":"http:\/\/schema.org","@type":"WebSite","url":"\/","potentialAction":{"@type":"SearchAction","target":"\/search\/{search_term_string}","query-input":"required name=search_term_string"}}</script>
+<!-- END STRUCTURED_DATA -->
+
+
+  <title>Pass-Path</title>
+  <meta name="title" content="PASS-PATH" />
+  <meta name="description" Content="여행 경로 리커맨더" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+
+  <link rel="stylesheet" href="https://t1.daumcdn.net/tistory_admin/static/font/AvenirLTStd/AvenirLTStd.css" />
+  <link rel="stylesheet" href="https://t1.daumcdn.net/tistory_admin/static/font/SpoqaHanSans/SpoqaHanSans.css" />
+  <link rel="stylesheet" href="https://t1.daumcdn.net/tistory_admin/static/font/icomoon/icomoon.css" />
+  <link rel="stylesheet" href="https://tistory3.daumcdn.net/tistory/0/xf_Portfolio/style.css" />
+  <link rel="stylesheet" href="https://tistory3.daumcdn.net/tistory/0/xf_Portfolio/images/slick.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+  <script src="https://tistory3.daumcdn.net/tistory/0/xf_Portfolio/images/slick.js"></script>
+  <script src="https://tistory3.daumcdn.net/tistory/0/xf_Portfolio/images/common.js"></script>
+  <script src="https://unpkg.com/vh-check/dist/vh-check.min.js"></script>
+  <script>
+    (function () {
+      // initialize the test
+      var test = vhCheck();
+    }());
+  </script>
+
+<link rel="stylesheet" type="text/css" href="https://t1.daumcdn.net/tistory_admin/assets/blog/tistory-4143aead47fb3d3c83016433af84643a03241408/blogs/plugins/TistoryProfileLayer/style.css?_version_=tistory-4143aead47fb3d3c83016433af84643a03241408" />
+<script type="text/javascript" src="https://t1.daumcdn.net/tistory_admin/assets/blog/tistory-4143aead47fb3d3c83016433af84643a03241408/blogs/plugins/TistoryProfileLayer/profile.js?_version_=tistory-4143aead47fb3d3c83016433af84643a03241408"></script>
+	<style type="text/css">
+		.another_category { border: 1px solid #E5E5E5; padding: 10px 10px 5px; margin:10px 0; clear: both; }
+		.another_category h4 { font-size: 12px !important; margin: 0 !important; border-bottom: 1px solid #E5E5E5 !important; padding: 2px 0 6px !important; }
+		.another_category h4 a { font-weight: bold !important; }
+		.another_category table { table-layout: fixed; border-collapse: collapse; width: 100% !important; margin-top: 10px !important; }
+		* html .another_category table { width: auto !important; }
+		*:first-child+html .another_category table { width: auto !important; }
+		.another_category th, .another_category td { padding: 0 0 4px !important; }
+		.another_category th { text-align: left; font-size: 12px !important; font-weight: normal;  word-break: break-all; overflow: hidden; line-height: 1.5; }
+		.another_category td { text-align: right; width: 80px; font-size: 11px; }
+		.another_category th a { font-weight: normal; text-decoration: none; border: none !important; }
+		.another_category th a.current{ font-weight: bold; text-decoration: none !important; border-bottom: 1px solid !important; }
+		.another_category th span { font-weight: normal; text-decoration: none; font: 10px Tahoma, Sans-serif; border: none !important; }
+
+		.another_category_color_gray, .another_category_color_gray h4 { border-color: #E5E5E5 !important; }
+		.another_category_color_gray * { color: #909090 !important; }
+		.another_category_color_gray th a.current{border-color:#909090 !important;}
+		.another_category_color_gray h4, .another_category_color_gray h4 a { color: #737373 !important; }
+
+
+		.another_category_color_red, .another_category_color_red h4 { border-color: #F6D4D3 !important;  }
+		.another_category_color_red * { color: #E86869 !important; }
+		.another_category_color_red th a.current{border-color:#E86869 !important;}
+		.another_category_color_red h4, .another_category_color_red h4 a { color: #ED0908 !important; }
+
+
+		.another_category_color_green, .another_category_color_green h4 { border-color: #CCE7C8 !important; }
+		.another_category_color_green * { color: #64C05B !important; }
+		.another_category_color_green th a.current{border-color:#64C05B !important;}
+		.another_category_color_green h4, .another_category_color_green h4 a { color: #3EA731 !important; }
+
+
+		.another_category_color_blue, .another_category_color_blue h4 { border-color: #C8DAF2 !important; }
+		.another_category_color_blue * { color: #477FD6 !important; }
+		.another_category_color_blue th a.current{border-color:#477FD6 !important;}
+		.another_category_color_blue h4, .another_category_color_blue h4 a { color: #1960CA !important; }
+
+
+		.another_category_color_violet, .another_category_color_violet h4 { border-color: #E1CEEC !important;  }
+		.another_category_color_violet * { color:#9D64C5 !important; }
+		.another_category_color_violet th a.current{border-color:#9D64C5 !important;}
+		.another_category_color_violet h4, .another_category_color_violet h4 a { color: #7E2CB5 !important; }
+	</style>
 </head>
-<body>
-<div id="map" style="width:100%;height:800px;"></div>
-<p>출발지와 도착지를 설정해주세요!</p>
 
+<body id="tt-body-index" class="theme_blue">
 
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=비밀"></script>
-<script>
-var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
-    mapOption = { 
-        center: new kakao.maps.LatLng(37.564213, 127.001698),
-        level: 10 // 지도의 확대 레벨
-    };
+	<script type="text/javascript" src="https://t1.daumcdn.net/tistory_admin/assets/blog/tistory-4143aead47fb3d3c83016433af84643a03241408/blogs/script/owner.js?_version_=tistory-4143aead47fb3d3c83016433af84643a03241408"></script>
+<script type="text/javascript" src="https://t1.daumcdn.net/tistory_admin/assets/blog/tistory-4143aead47fb3d3c83016433af84643a03241408/blogs/script/blog/common.js?_version_=tistory-4143aead47fb3d3c83016433af84643a03241408"></script>
+<div style="margin:0; padding:0; border:none; background:none; float:none; clear:none; z-index:0"></div>
+    <!-- warp / 테마 변경시 theme_pink / theme_blue / theme_green / theme_gray-->
+    <div id="wrap">
 
-var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
+      <!-- box_header -->
+      <header class="box_header">
+        <h1 class="title_logo">
+          <a href="/" title="Pass-Path" class="link_logo">
 
-var startSrc = 'https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/red_b.png', // 출발 마커이미지의 주소입니다    
-    startSize = new kakao.maps.Size(50, 45), // 출발 마커이미지의 크기입니다 
-    startOption = { 
-        offset: new kakao.maps.Point(15, 43) // 출발 마커이미지에서 마커의 좌표에 일치시킬 좌표를 설정합니다 (기본값은 이미지의 가운데 아래입니다)
-    };
+              Pass-Path
+            
+          </a>
+        </h1>
+      </header>
 
-// 출발 마커 이미지를 생성합니다
-var startImage = new kakao.maps.MarkerImage(startSrc, startSize, startOption);
+      <div id="container">
+    <main id="main">
 
-var startDragSrc = 'https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/red_drag.png', // 출발 마커의 드래그 이미지 주소입니다    
-    startDragSize = new kakao.maps.Size(50, 64), // 출발 마커의 드래그 이미지 크기입니다 
-    startDragOption = { 
-        offset: new kakao.maps.Point(15, 54) // 출발 마커의 드래그 이미지에서 마커의 좌표에 일치시킬 좌표를 설정합니다 (기본값은 이미지의 가운데 아래입니다)
-    };
+        <div class="area_cover">
+          
+              <!-- type_featured -->
+              <div class="type_featured">
 
-// 출발 마커의 드래그 이미지를 생성합니다
-var startDragImage = new kakao.maps.MarkerImage(startDragSrc, startDragSize, startDragOption);
+                    <div class="slide_item">
+                      <div class="link_slide item-thumbnail" style="background-image:url('https://tistory4.daumcdn.net/tistory/1978677/skinCover/fcb080e7767a4941964dfee78420025e');">
+                        <div class="text_slide thema_apply">
+                          <strong>PASS-PATH</strong>
+                            <p class="text">여행지와 가고 싶은 장소만 선택하면<br>
+                                            경로가 자동으로 완성되는<br>
+                                            쉽고 간편한 여행 경로 리커맨더</p>
+                          <a href="/pass" class="link_detail">경유지</a><br>
+                          <a href="/near" class="link_detail">현재지</a>
+                        </div>
+                      </div>
+                    </div>
 
-// 출발 마커가 표시될 위치입니다
-var startPosition = new kakao.maps.LatLng(37.564213, 127.001698);
+                <div class="inner_main_slide">
 
+                </div>
+              </div>
+              <!-- // type_featured -->
+            </div>
+    </main>
+    </div>
 
-// 출발 마커를 생성합니다
-var startMarker = new kakao.maps.Marker({
-    map: map, // 출발 마커가 지도 위에 표시되도록 설정합니다
-    position: startPosition,
-    draggable: true, // 출발 마커가 드래그 가능하도록 설정합니다
-    image: startImage // 출발 마커이미지를 설정합니다
-});
+    <footer id="footer">
+      <div class="inner_footer">
+          <a href="" class="link_footer">ERASER</a>
+      </div>
+      <div>
+        <address>© 2020 Pass-Path. All rights reserved.</address>
+      </div>
+    </footer>
 
-
-// 출발 마커에 dragstart 이벤트를 등록합니다
-kakao.maps.event.addListener(startMarker, 'dragstart', function() {
-    // 출발 마커의 드래그가 시작될 때 마커 이미지를 변경합니다
-    startMarker.setImage(startDragImage);
-});
-
-// 출발 마커에 dragend 이벤트를 등록합니다
-kakao.maps.event.addListener(startMarker, 'dragend', function() {
-     // 출발 마커의 드래그가 종료될 때 마커 이미지를 원래 이미지로 변경합니다
-    startMarker.setImage(startImage);
-});
-
-var arriveSrc = 'https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/blue_b.png', // 도착 마커이미지 주소입니다    
-arriveSize = new kakao.maps.Size(50, 45), // 도착 마커이미지의 크기입니다 
-arriveOption = { 
-    offset: new kakao.maps.Point(15, 43) // 도착 마커이미지에서 마커의 좌표에 일치시킬 좌표를 설정합니다 (기본값은 이미지의 가운데 아래입니다)
-};
-
-
-// 도착 마커 이미지를 생성합니다
-var arriveImage = new kakao.maps.MarkerImage(arriveSrc, arriveSize, arriveOption);
-
-var arriveDragSrc = 'https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/blue_drag.png', // 도착 마커의 드래그 이미지 주소입니다    
-    arriveDragSize = new kakao.maps.Size(50, 64), // 도착 마커의 드래그 이미지 크기입니다 
-    arriveDragOption = { 
-        offset: new kakao.maps.Point(15, 54) // 도착 마커의 드래그 이미지에서 마커의 좌표에 일치시킬 좌표를 설정합니다 (기본값은 이미지의 가운데 아래입니다)
-    };
- 
-// 도착 마커의 드래그 이미지를 생성합니다
-var arriveDragImage = new kakao.maps.MarkerImage(arriveDragSrc, arriveDragSize, arriveDragOption);
-
-// 도착 마커가 표시될 위치입니다 
-var arrivePosition = new kakao.maps.LatLng(37.564213, 127.011698);    
-
-// 도착 마커를 생성합니다 
-var arriveMarker = new kakao.maps.Marker({  
-    map: map, // 도착 마커가 지도 위에 표시되도록 설정합니다
-    position: arrivePosition,
-    draggable: true, // 도착 마커가 드래그 가능하도록 설정합니다
-    image: arriveImage // 도착 마커이미지를 설정합니다
-});
-
-// 도착 마커에 dragstart 이벤트를 등록합니다
-kakao.maps.event.addListener(arriveMarker, 'dragstart', function() {
-    // 도착 마커의 드래그가 시작될 때 마커 이미지를 변경합니다
-    arriveMarker.setImage(arriveDragImage);
-});
-
-// 도착 마커에 dragend 이벤트를 등록합니다
-kakao.maps.event.addListener(arriveMarker, 'dragend', function() {
-     // 도착 마커의 드래그가 종료될 때 마커 이미지를 원래 이미지로 변경합니다
-    arriveMarker.setImage(arriveImage);  
-});
-
-</script>
-<button type="button" onclick="Search();">text</button>
-<script>
-    function Search(){
-        var startx = startMarker.getPosition().getLat();
-        var starty = startMarker.getPosition().getLng();
-        var endx = arriveMarker.getPosition().getLat();
-        var endy = arriveMarker.getPosition().getLng();
-        location.href ='/search?startx='+ startx +'&starty='+ starty +'&endx=' + endx + '&endy=' + endy;
-}
-</script>
-
-</body>
+    </div>
 </html>
