--- a/views/near.ejs
+++ b/views/near.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>검색 결과</title>
+    <title>주변 검색</title>
     <style>
 body, html {height: 100%;}
 .map_wrap, .map_wrap * {margin:0; padding:0;font-family:'Malgun Gothic',dotum,'돋움',sans-serif;font-size:12px;}
@@ -31,96 +31,45 @@ body, html {height: 100%;}
 .placeinfo .title {font-weight: bold; font-size:14px;border-radius: 6px 6px 0 0;margin: -1px -1px 0 -1px;padding:10px; color: #fff;background: #d95050;background: #d95050 url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/arrow_white.png) no-repeat right 14px center;}
 .placeinfo .tel {color:#0f7833;}
 .placeinfo .jibun {color:#999;font-size:11px;margin-top:0;}
-
-
-.map_wrap a, .map_wrap a:hover, .map_wrap a:active{color:#000;text-decoration: none;}
-#menu_wrap {position:absolute;top:0;left:1600px;bottom:0;width:250px;margin:10px 0 30px 10px;padding:5px;overflow-y:auto;background:rgba(255, 255, 255, 0.7);z-index: 1;font-size:12px;border-radius: 10px;}
-.bg_white {background:#fff;}
-#placesList li {list-style: none;}
-#placesList .item {position:relative;border-bottom:1px solid #888;overflow: hidden;cursor: pointer;min-height: 65px;}
-#placesList .item span {display: block;margin-top:4px;}
-#placesList .item h5, #placesList .item .info {text-overflow: ellipsis;overflow: hidden;white-space: nowrap;}
-#placesList .item .info{padding:10px 0 10px 55px;}
-#placesList .info .gray {color:#8a8a8a;}
-#placesList .info .jibun {padding-left:26px;background:url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/places_jibun.png) no-repeat;}
-#placesList .info .tel {color:#009900;}
-#placesList .item .markerbg {float:left;position:absolute;width:36px; height:37px;margin:10px 0 0 10px;background:url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/marker_number_blue.png) no-repeat;}
-#placesList .item .marker_1 {background-position: 0 -10px;}
-#placesList .item .marker_2 {background-position: 0 -56px;}
-#placesList .item .marker_3 {background-position: 0 -102px}
-#placesList .item .marker_4 {background-position: 0 -148px;}
-#placesList .item .marker_5 {background-position: 0 -194px;}
-#placesList .item .marker_6 {background-position: 0 -240px;}
-#placesList .item .marker_7 {background-position: 0 -286px;}
-#placesList .item .marker_8 {background-position: 0 -332px;}
-#placesList .item .marker_9 {background-position: 0 -378px;}
-#placesList .item .marker_10 {background-position: 0 -423px;}
-#placesList .item .marker_11 {background-position: 0 -470px;}
-#placesList .item .marker_12 {background-position: 0 -516px;}
-#placesList .item .marker_13 {background-position: 0 -562px;}
-#placesList .item .marker_14 {background-position: 0 -608px;}
-#placesList .item .marker_15 {background-position: 0 -654px;}
-#pagination {margin:10px auto;text-align: center;}
-#pagination a {display:inline-block;margin-right:10px;}
-#pagination .on {font-weight: bold; cursor: default;color:#777;}
 </style>
 </head>
 <body>
+<p style="margin-top:-12px">
 
+</p>
 <div class="map_wrap">
     <div id="map" style="width:100%;height:100%;position:relative;overflow:hidden;"></div>
     <ul id="category">
-        <li id="AT4" data-order="0"> 
+        <li id="BK9" data-order="0"> 
+            <span class="category_bg bank"></span>
+            은행
+        </li>       
+        <li id="MT1" data-order="1"> 
+            <span class="category_bg mart"></span>
+            마트
+        </li>  
+        <li id="PM9" data-order="2"> 
+            <span class="category_bg pharmacy"></span>
+            약국
+        </li>  
+        <li id="AT4" data-order="3"> 
             <span class="category_bg oil"></span>
             관광지
-        </li>       
-        <li id="AD5" data-order="1"> 
-            <span class="category_bg mart"></span>
-            숙박
         </li>  
-        <li id="CE7" data-order="2"> 
+        <li id="CE7" data-order="4"> 
             <span class="category_bg cafe"></span>
             카페
         </li>  
-        <li id="FD6" data-order="3"> 
+        <li id="CS2" data-order="5"> 
             <span class="category_bg store"></span>
-            음식점
+            편의점
         </li>      
     </ul>
-    <div id="menu_wrap" class="bg_white">
-        <hr>
-        <ul id="placesList"></ul>
-        <div id="pagination"></div>
-    </div>
 </div>
+
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=비밀&libraries=services"></script>
 <script>
-var Request = function() {  
-        this.getParameter = function(name) {  
-            var rtnval = '';  
-            var nowAddress = unescape(location.href);  
-            var parameters = (nowAddress.slice(nowAddress.indexOf('?') + 1, nowAddress.length)).split('&');  
-            for (var i = 0; i < parameters.length; i++) {  
-                var varName = parameters[i].split('=')[0];  
-                if (varName.toUpperCase() == name.toUpperCase()) {  
-                    rtnval = parameters[i].split('=')[1];  
-                    break;  
-                }  
-            }  
-            return rtnval;  
-        }  
-    }  
-var request = new Request();
-var startx = request.getParameter('startx');
-var starty = request.getParameter('starty');
-var endx = request.getParameter('endx');
-var endy = request.getParameter('endy');
-
-var sw = new kakao.maps.LatLng(startx, endy),
-    ne = new kakao.maps.LatLng(endx, starty);
-
-var bs = new kakao.maps.LatLngBounds(sw, ne);
-
+// 마커를 클릭했을 때 해당 장소의 상세정보를 보여줄 커스텀오버레이입니다
 var placeOverlay = new kakao.maps.CustomOverlay({zIndex:1}), 
     contentNode = document.createElement('div'), // 커스텀 오버레이의 컨텐츠 엘리먼트 입니다 
     markers = [], // 마커를 담을 배열입니다
@@ -128,15 +77,55 @@ var placeOverlay = new kakao.maps.CustomOverlay({zIndex:1}),
  
 var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
     mapOption = {
-        center: new kakao.maps.LatLng(endx, endy), // 지도의 중심좌표
-        level: 11 // 지도의 확대 레벨
+        center: new kakao.maps.LatLng(35.950000, 128.250000), // 지도의 중심좌표
+        level: 12 // 지도의 확대 레벨
     };  
 
 // 지도를 생성합니다    
-var map = new kakao.maps.Map(mapContainer, mapOption); 
+var map = new kakao.maps.Map(mapContainer, mapOption);
+var startSrc = 'https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/red_b.png', // 출발 마커이미지의 주소입니다    
+    startSize = new kakao.maps.Size(50, 45), // 출발 마커이미지의 크기입니다 
+    startOption = { 
+        offset: new kakao.maps.Point(15, 43) // 출발 마커이미지에서 마커의 좌표에 일치시킬 좌표를 설정합니다 (기본값은 이미지의 가운데 아래입니다)
+    };
+
+// 출발 마커 이미지를 생성합니다
+var startImage = new kakao.maps.MarkerImage(startSrc, startSize, startOption);
+
+var startDragSrc = 'https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/red_drag.png', // 출발 마커의 드래그 이미지 주소입니다    
+    startDragSize = new kakao.maps.Size(50, 64), // 출발 마커의 드래그 이미지 크기입니다 
+    startDragOption = { 
+        offset: new kakao.maps.Point(15, 54) // 출발 마커의 드래그 이미지에서 마커의 좌표에 일치시킬 좌표를 설정합니다 (기본값은 이미지의 가운데 아래입니다)
+    };
+
+// 출발 마커의 드래그 이미지를 생성합니다
+var startDragImage = new kakao.maps.MarkerImage(startDragSrc, startDragSize, startDragOption);
+
+// 출발 마커가 표시될 위치입니다 
+var startPosition = new kakao.maps.LatLng(37.245635, 127.179108); 
+
+// 출발 마커를 생성합니다
+var startMarker = new kakao.maps.Marker({
+    map: map, // 출발 마커가 지도 위에 표시되도록 설정합니다
+    position: startPosition,
+    draggable: true, // 출발 마커가 드래그 가능하도록 설정합니다
+    image: startImage // 출발 마커이미지를 설정합니다
+});
+
+// 출발 마커에 dragstart 이벤트를 등록합니다
+kakao.maps.event.addListener(startMarker, 'dragstart', function() {
+    // 출발 마커의 드래그가 시작될 때 마커 이미지를 변경합니다
+    startMarker.setImage(startDragImage);
+});
+
+// 출발 마커에 dragend 이벤트를 등록합니다
+kakao.maps.event.addListener(startMarker, 'dragend', function() {
+     // 출발 마커의 드래그가 종료될 때 마커 이미지를 원래 이미지로 변경합니다
+    startMarker.setImage(startImage);
+});
 
 // 장소 검색 객체를 생성합니다
-var ps = new kakao.maps.services.Places();
+var ps = new kakao.maps.services.Places(); 
 
 // 지도에 idle 이벤트를 등록합니다
 kakao.maps.event.addListener(map, 'idle', searchPlaces);
@@ -169,14 +158,15 @@ function searchPlaces() {
     if (!currCategory) {
         return;
     }
-    
+    var startx = startMarker.getPosition().getLat();
+    var starty = startMarker.getPosition().getLng();
     // 커스텀 오버레이를 숨깁니다 
     placeOverlay.setMap(null);
 
-    removeMarker();
     // 지도에 표시되고 있는 마커를 제거합니다
+    removeMarker();
     
-    ps.categorySearch(currCategory, placesSearchCB, {bounds : bs}); 
+    ps.categorySearch(currCategory, placesSearchCB, {location: new kakao.maps.LatLng(startx, starty)}); 
 }
 
 // 장소검색이 완료됐을 때 호출되는 콜백함수 입니다
@@ -185,38 +175,29 @@ function placesSearchCB(data, status, pagination) {
 
         // 정상적으로 검색이 완료됐으면 지도에 마커를 표출합니다
         displayPlaces(data);
-        displayPagination(pagination);
     } else if (status === kakao.maps.services.Status.ZERO_RESULT) {
         // 검색결과가 없는경우 해야할 처리가 있다면 이곳에 작성해 주세요
-        alert('검색 결과가 존재하지 않습니다.');
-        return;
 
     } else if (status === kakao.maps.services.Status.ERROR) {
         // 에러로 인해 검색결과가 나오지 않은 경우 해야할 처리가 있다면 이곳에 작성해 주세요
-        alert('검색 결과 중 오류가 발생했습니다.');
-        return;
+        
     }
 }
 
 // 지도에 마커를 표출하는 함수입니다
 function displayPlaces(places) {
 
-    var listEl = document.getElementById('placesList'), 
-    menuEl = document.getElementById('menu_wrap'),
-    fragment = document.createDocumentFragment(),  
-    listStr = '';
-    removeAllChildNods(listEl);
-    removeMarker();
     // 몇번째 카테고리가 선택되어 있는지 얻어옵니다
     // 이 순서는 스프라이트 이미지에서의 위치를 계산하는데 사용됩니다
     var order = document.getElementById(currCategory).getAttribute('data-order');
 
+    
+
     for ( var i=0; i<places.length; i++ ) {
-            var placePosition = new kakao.maps.LatLng(places[i].y, places[i].x);
-            
+
             // 마커를 생성하고 지도에 표시합니다
-            var marker = addMarker(placePosition, order);
-            var itemEl = getListItem(i, places[i]);
+            var marker = addMarker(new kakao.maps.LatLng(places[i].y, places[i].x), order);
+
             // 마커와 검색결과 항목을 클릭 했을 때
             // 장소정보를 표출하도록 클릭 이벤트를 등록합니다
             (function(marker, place) {
@@ -224,34 +205,7 @@ function displayPlaces(places) {
                     displayPlaceInfo(place);
                 });
             })(marker, places[i]);
-            fragment.appendChild(itemEl);
     }
-    listEl.appendChild(fragment);
-    menuEl.scrollTop = 0;
-}
-
-function getListItem(index, places) {
-
-    var el = document.createElement('li'),
-    itemStr = '<span class="markerbg marker_' + (index+1) + '"></span>' +
-            '<div class="info">' +
-            '   <h5>' + places.place_name + '</h5>';
-
-    if (places.road_address_name) {
-    itemStr += '    <span>' + places.road_address_name + '</span>' +
-                '   <span class="jibun gray">' +  places.address_name  + '</span>';
-    }   
-    else {
-    itemStr += '    <span>' +  places.address_name  + '</span>'; 
-    }
-             
-    itemStr += '  <span class="tel">' + places.phone  + '</span>' +
-            '</div>';           
-
-    el.innerHTML = itemStr;
-    el.className = 'item';
-
-    return el;
 }
 
 // 마커를 생성하고 지도 위에 마커를 표시하는 함수입니다
@@ -304,52 +258,6 @@ function displayPlaceInfo (place) {
     placeOverlay.setMap(map);  
 }
 
-// 검색결과 목록 하단에 페이지번호를 표시는 함수입니다
-function displayPagination(pagination) {
-    var paginationEl = document.getElementById('pagination'),
-        fragment = document.createDocumentFragment(),
-        i; 
-
-    // 기존에 추가된 페이지번호를 삭제합니다
-    while (paginationEl.hasChildNodes()) {
-        paginationEl.removeChild (paginationEl.lastChild);
-    }
-
-    for (i=1; i<=pagination.last; i++) {
-        var el = document.createElement('a');
-        el.href = "#";
-        el.innerHTML = i;
-
-        if (i===pagination.current) {
-            el.className = 'on';
-        } else {
-            el.onclick = (function(i) {
-                return function() {
-                    pagination.gotoPage(i);
-                }
-            })(i);
-        }
-
-        fragment.appendChild(el);
-    }
-    paginationEl.appendChild(fragment);
-}
-
-// 검색결과 목록 또는 마커를 클릭했을 때 호출되는 함수입니다
-// 인포윈도우에 장소명을 표시합니다
-function displayInfowindow(marker, title) {
-    var content = '<div style="padding:5px;z-index:1;">' + title + '</div>';
-
-    infowindow.setContent(content);
-    infowindow.open(map, marker);
-}
-
- // 검색결과 목록의 자식 Element를 제거하는 함수입니다
- function removeAllChildNods(el) {   
-    while (el.hasChildNodes()) {
-        el.removeChild (el.lastChild);
-    }
-}
 
 // 각 카테고리에 클릭 이벤트를 등록합니다
 function addCategoryClickEvent() {
