--- a/views/main.ejs
+++ b/views/main.ejs
@@ -41,49 +41,6 @@ lightbox.options.albumLabel = "%1 / %2";
 
 <link rel="stylesheet" type="text/css" href="https://t1.daumcdn.net/tistory_admin/assets/blog/tistory-4143aead47fb3d3c83016433af84643a03241408/blogs/plugins/TistoryProfileLayer/style.css?_version_=tistory-4143aead47fb3d3c83016433af84643a03241408" />
 <script type="text/javascript" src="https://t1.daumcdn.net/tistory_admin/assets/blog/tistory-4143aead47fb3d3c83016433af84643a03241408/blogs/plugins/TistoryProfileLayer/profile.js?_version_=tistory-4143aead47fb3d3c83016433af84643a03241408"></script>
-	<style type="text/css">
-		.another_category { border: 1px solid #E5E5E5; padding: 10px 10px 5px; margin:10px 0; clear: both; }
-		.another_category h4 { font-size: 12px !important; margin: 0 !important; border-bottom: 1px solid #E5E5E5 !important; padding: 2px 0 6px !important; }
-		.another_category h4 a { font-weight: bold !important; }
-		.another_category table { table-layout: fixed; border-collapse: collapse; width: 100% !important; margin-top: 10px !important; }
-		* html .another_category table { width: auto !important; }
-		*:first-child+html .another_category table { width: auto !important; }
-		.another_category th, .another_category td { padding: 0 0 4px !important; }
-		.another_category th { text-align: left; font-size: 12px !important; font-weight: normal;  word-break: break-all; overflow: hidden; line-height: 1.5; }
-		.another_category td { text-align: right; width: 80px; font-size: 11px; }
-		.another_category th a { font-weight: normal; text-decoration: none; border: none !important; }
-		.another_category th a.current{ font-weight: bold; text-decoration: none !important; border-bottom: 1px solid !important; }
-		.another_category th span { font-weight: normal; text-decoration: none; font: 10px Tahoma, Sans-serif; border: none !important; }
-
-		.another_category_color_gray, .another_category_color_gray h4 { border-color: #E5E5E5 !important; }
-		.another_category_color_gray * { color: #909090 !important; }
-		.another_category_color_gray th a.current{border-color:#909090 !important;}
-		.another_category_color_gray h4, .another_category_color_gray h4 a { color: #737373 !important; }
-
-
-		.another_category_color_red, .another_category_color_red h4 { border-color: #F6D4D3 !important;  }
-		.another_category_color_red * { color: #E86869 !important; }
-		.another_category_color_red th a.current{border-color:#E86869 !important;}
-		.another_category_color_red h4, .another_category_color_red h4 a { color: #ED0908 !important; }
-
-
-		.another_category_color_green, .another_category_color_green h4 { border-color: #CCE7C8 !important; }
-		.another_category_color_green * { color: #64C05B !important; }
-		.another_category_color_green th a.current{border-color:#64C05B !important;}
-		.another_category_color_green h4, .another_category_color_green h4 a { color: #3EA731 !important; }
-
-
-		.another_category_color_blue, .another_category_color_blue h4 { border-color: #C8DAF2 !important; }
-		.another_category_color_blue * { color: #477FD6 !important; }
-		.another_category_color_blue th a.current{border-color:#477FD6 !important;}
-		.another_category_color_blue h4, .another_category_color_blue h4 a { color: #1960CA !important; }
-
-
-		.another_category_color_violet, .another_category_color_violet h4 { border-color: #E1CEEC !important;  }
-		.another_category_color_violet * { color:#9D64C5 !important; }
-		.another_category_color_violet th a.current{border-color:#9D64C5 !important;}
-		.another_category_color_violet h4, .another_category_color_violet h4 a { color: #7E2CB5 !important; }
-	</style>
 </head>
 
 <body id="tt-body-index" class="theme_blue">
@@ -116,12 +73,12 @@ lightbox.options.albumLabel = "%1 / %2";
                     <div class="slide_item">
                       <div class="link_slide item-thumbnail" style="background-image:url('https://tistory4.daumcdn.net/tistory/1978677/skinCover/fcb080e7767a4941964dfee78420025e');">
                         <div class="text_slide thema_apply">
-                          <strong>PASS-PATH</strong>
+                          <strong>Pass-Path</strong>
                             <p class="text">여행지와 가고 싶은 장소만 선택하면<br>
                                             경로가 자동으로 완성되는<br>
                                             쉽고 간편한 여행 경로 리커맨더</p>
-                          <a href="/pass" class="link_detail">경유지</a><br>
-                          <a href="/near" class="link_detail">현재지</a>
+                          <a href="/pass" class="link_detail">들를 곳 찾기</a><br>
+                          <a href="/near" class="link_detail">내 주변 장소</a>
                         </div>
                       </div>
                     </div>
