--- a/views/pass.ejs
+++ b/views/pass.ejs
@@ -3,13 +3,24 @@
 <head>
     <meta charset="utf-8">
     <title>Pass-Path</title>
-    <style>body, html {height: 100%;}</style>
+    <style>
+        body, html {height: 100%;}
+    </style>
     
 </head>
-<body>
-<p>출발지와 도착지를 설정해주세요!</p>
+<body style="background-color:#cccccc;">
+    <header class="box_header" style="float:left; color: white;">
+        <h1 class="title_logo">
+          <a href="/" title="Pass-Path" class="link_logo" style="text-decoration:none; color:black; font-family: monospace;">
 
-<button type="button" onclick="Search();">검색</button>
+              Pass-Path
+            
+          </a>
+        </h1>
+    </header>
+<p>&nbsp;&nbsp;출발지와 도착지 깃발을 드래그하여 설정</p>
+<div>&nbsp;&nbsp;
+<button type="button" onclick="Search();" style="background-color:#B5B5FF; font-family:Open Sans;">경로 주변 검색</button>
 <script>
     function Search(){
         var startx = startMarker.getPosition().getLat();
@@ -18,12 +29,12 @@
         var endy = arriveMarker.getPosition().getLng();
         location.href ='/search?startx='+ startx +'&starty='+ starty +'&endx=' + endx + '&endy=' + endy;
 }
-</script>
+</script></div>
 <div id="map" style="width:100%;height:90%;"></div>
 
 
 
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=비밀"></script>
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=발급받은 APP KEY 입력"></script>
 <script>
 var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
     mapOption = { 
